# myswarm

./: .gitignore  Dockerfile  README.md  k8s.local.template.yml  k8s.template.yml  pyproject.toml
content/: content-769e3c25-c99e-433f-b21d-82d4976850ef.md  content-78632a30-7c35-4f2f-8da3-3ac784d0ae80.md  content-7d4d40b2-c71c-441f-953e-ac26dd7486da.md  content-96ff84e7-72ea-4308-b52e-ba91a19ca2c1.md
lib/: agent_sample.py  app.py  search.py  swarm_creators.py  topics.py
terraform/: .terraform.lock.hcl  core.tf  eks.tf  iam.tf  terraform.tfstate  terraform.tfstate.backup
